SERVER-76102: Fix handleRIDRangeScan to set hasCompatibleCollation when query excludes values of the cluster key affected by collation